--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -1,31 +1,65 @@
-html {
-    background-color: #ffffff;
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    user-select: none;
 }
 
-html,
-app-root,
-body {
-    height: -webkit-fill-available;
+*:focus {
+    outline: none;
+    box-shadow: none;
+}
+
+:root, [data-theme='dark'], [data-theme='light'] {
+    transition: all 0.3s ease-in-out;
+}
+
+:root {
+    --primary-color: #191034;
+    --secondary-color: #424597;
+    --tertiary-color: #1c1656;
+    --quaternary-color: #393c7d;
+    --background-color: #1c0946e7;
+    --text-color: #cbcbcb;
+    --highlight-color: #e94560;
+    --footer-text: #888;
+}
+
+[data-theme='light'] {
+    --primary-color: #dddddd;
+    --secondary-color: #cdcdcd;
+    --tertiary-color: #9a9a9a;
+    --quaternary-color: #8a8a8a;
+    --background-color: #b9b9b9;
+    --text-color: #333333;
+    --highlight-color: #d94560;
+    --footer-text: #2d2d2d;
+}
+
+html, app-root, body {
     width: -webkit-fill-available;
     margin: 0;
     padding: 0;
 }
 
 body {
-    font-family: Roboto, 'Helvetica Neue', sans-serif;
-    overflow-x: hidden;
+    font-family: 'Inter', Roboto, 'Helvetica Neue', sans-serif;
+    background-color: var(--primary-color);
+    background-image: linear-gradient(
+        135deg, 
+        var(--primary-color), 
+        var(--secondary-color), 
+        var(--tertiary-color), 
+        var(--quaternary-color)
+    );
+    background-size: 300% 300%;
+    background-repeat: no-repeat;
+    animation: gradientAnimation 12s ease infinite;
+    color: var(--text-color);
 }
 
-
-body::-webkit-scrollbar {
-    width: 12px;
-}
-
-body::-webkit-scrollbar-thumb {
-    background-color: #a88bc3;
-    border-radius: 15px;
-}
-
-body::-webkit-scrollbar-thumb:active {
-    background-color: #4d3f5a;
+@keyframes gradientAnimation {
+    0% { background-position: 0% 50%; }
+    50% { background-position: 100% 50%; }
+    100% { background-position: 0% 50%; }
 }
