--- a/client/src/app/components/header/header.component.html
+++ b/client/src/app/components/header/header.component.html
@@ -52,7 +52,25 @@
             </a>
           </li>
           <li class="icon-content">
-            <!-- theme thing -->
+            <a data-social="theme"
+               aria-label="Theme"
+               (click)="toggleTheme()"
+            >
+                <svg
+                xml:space="preserve"
+                viewBox="0 0 16 16"
+                class="bi bi-moon"
+                fill="currentColor"
+                height="16"
+                width="16"
+                xmlns="http://www.w3.org/2000/svg"
+                >
+                <path
+                  fill="currentColor"
+                  d="M6 .278a7.5 7.5 0 1 0 9.447 9.447A7.5 7.5 0 0 1 6 .278zM8 15a7 7 0 1 1 6.32-4.472A7.5 7.5 0 0 0 8 15z"
+                ></path>
+                </svg>
+            </a>
           </li>
         </ul>
       </div>
