--- a/client/src/app/components/viz-section/viz-section.component.scss
+++ b/client/src/app/components/viz-section/viz-section.component.scss
@@ -1,38 +1,77 @@
 .viz-section {
+  position: relative;
   background: rgba(255, 255, 255, 0.05);
   border-radius: 12px;
   padding: 2rem;
-  margin: 1rem 0;
+  margin: 2rem 0;
+  box-shadow: 0 4px 10px rgba(0,0,0,0.1);
   transition: transform 0.3s ease;
-
-  .header {
+  
+  .viz-header {
+    display: flex;
+    align-items: baseline;
     margin-bottom: 1rem;
     
-    h2 {
-      color: var(--highlight-color);
+    .viz-title {
       font-size: 1.8rem;
-      margin-bottom: 0.5rem;
-    }
-    
-    p {
-      color: var(--footer-text);
-      max-width: 800px;
+      font-weight: 800;
+      color: var(--highlight-color);
     }
   }
-}
 
-.viz-container {
-  background: rgba(255, 255, 255, 0.03);
-  border-radius: 12px;
-  position: relative;
-  overflow: hidden;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-@keyframes pulse {
-  0% { opacity: 0.3; }
-  50% { opacity: 0.1; }
-  100% { opacity: 0.3; }
+  .viz-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 15px;
+  }
+  
+  .viz-breakdown {
+    h3 {
+      font-size: 1.4rem;
+      color: var(--secondary-text);
+    }
+    
+    .question-list {
+      list-style: none;
+      padding: 0;
+      display: flex;
+      flex-direction: column;
+      gap: 5px;
+      justify-content: center;
+      margin-top: 7px;
+      li {
+        strong {
+          color: var(--highlight-color);
+        }
+      }
+    }
+  }
+  
+  .viz-description {
+    p {
+      line-height: 1.6;
+      color: var(--footer-text);
+    }
+  }
+  
+  .viz-d3-container {
+    background: rgba(255, 255, 255, 0.03);
+    border-radius: 12px;
+    overflow: hidden;
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  // Responsive adjustments
+  @media (max-width: 768px) {
+    padding: 1rem;
+    
+    .viz-header {
+      flex-direction: column;
+      align-items: flex-start;
+    }
+  }
 }
