--- a/client/src/app/pages/main-page/main-page.component.html
+++ b/client/src/app/pages/main-page/main-page.component.html
@@ -19,4 +19,9 @@
       <app-scatter-viz></app-scatter-viz>
     </app-viz-section>
   </div>
+  
+  <footer>
+    <img src="assets/beyondGPA.png" alt="Logo" class="logo">
+    <p>&copy; 2025 BeyondGPA. All rights reserved.</p>
+  </footer>
 </main>
