--- a/client/src/app/components/header/header.component.scss
+++ b/client/src/app/components/header/header.component.scss
@@ -1,6 +1,6 @@
 .header {
-  padding: 1rem 0;
-  background: rgba(var(--quaternary-color), 0.1);
+  padding: 0.75rem 0;
+  background: var(--background-color);
   backdrop-filter: blur(10px);
   position: fixed;
   width: 100%;
