--- a/client/src/app/pages/main-page/main-page.component.scss
+++ b/client/src/app/pages/main-page/main-page.component.scss
@@ -1,16 +1,30 @@
 main {
-    padding-top: 140px;
-  }
+  padding-top: 140px;
+}
   
-  .timeline-container {
-    position: relative;
-    padding: 0 30px;
-    
-    // Ensure each viz section aligns well with the timeline dot
-    app-viz-section {
-      position: relative;
-      margin-left: 40px; // to offset from the timeline line
-      margin-bottom: 3rem;
-    }
+.timeline-container {
+  position: relative;
+  padding: 0 30px;
+
+}
+
+footer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 5px;
+  color: var(--footer-text);
+  border-top: 1px solid var(--secondary-color);
+  margin-top: 40px;
+
+  .logo {
+    width: 50px;
+    height: auto;
+    margin-bottom: 10px;
   }
-  
+
+  p {
+    font-size: 14px;
+    text-align: center;
+  }
+}
