fix: attribute name

--- a/client/src/app/components/viz-section/viz-section.component.html
+++ b/client/src/app/components/viz-section/viz-section.component.html
@@ -1,6 +1,6 @@
 <section class="viz-section">
   <header class="viz-header">
-    <h2 class="viz-title"><span>{{ sectionId }} </span><span>{{ title }}</span></h2>
+    <h2 class="viz-title"><span>{{ sectionId }} </span><span>{{ section }}</span></h2>
   </header>
   
   <div class="viz-container">
