--- a/client/src/app/components/header/header.component.html
+++ b/client/src/app/components/header/header.component.html
@@ -56,12 +56,11 @@
             </a>
           </li>
           <li class="toggle-theme">
-            <button
-              title="Toggle Theme"
-              class="button"
+            <button title="Toggle Theme" class="button"
               (click)="toggleTheme()"
-            >
-              <img [src]="iconSrc" alt="Theme Icon" height="16" width="16">
+              (mouseenter)="isHovered = true"
+              (mouseleave)="isHovered = false">
+              <img [attr.src]="isHovered ? hoverIconSrc : iconSrc" alt="Theme Icon" height="16" width="16">
             </button>
           </li>
         </ul>
