--- a/client/src/app/components/header/header.component.scss
+++ b/client/src/app/components/header/header.component.scss
@@ -25,22 +25,6 @@
     transform: translateY(-50%);
     display: flex;
     gap: 1.5rem;
-
-    .icon {
-      color: var(--text-color);
-      cursor: pointer;
-      transition: opacity 0.3s ease;
-      
-      &:hover {
-        opacity: 0.8;
-      }
-
-      mat-icon {
-        font-size: 1.5rem;
-        width: auto;
-        height: auto;
-      }
-    }
   }
 }
 
@@ -77,9 +61,8 @@
 
 ul {
   list-style: none;
-  background-color: var(--text-color);
-  padding: 2px;
-  border-radius: 5px;
+  // background-color: var(--text-color);
+  // border-radius: 5px;
   
 }
 
@@ -173,7 +156,7 @@ ul {
   border-radius: 50%;
   margin: 0 10px;
   cursor: pointer;
-  transition: all 0.3s ease;
+  transition: all 0.3s ease-in-out;
 
   img {
     width: 24px;
@@ -184,4 +167,8 @@ ul {
     background-color: #ffffff4e;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   }
+}
+
+.button img {
+  transition: all 0.3s ease-in-out;
 }
