--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -20,6 +20,7 @@
     --tertiary-color: #1c1656;
     --quaternary-color: #393c7d;
     --background-color: #2c177283;
+    --viz-background-color: #0000006f;
     --text-color: #cbcbcb;
     --highlight-color: #e94560;
     --footer-text: #888;
@@ -31,6 +32,7 @@
     --tertiary-color: #9a9a9a;
     --quaternary-color: #8a8a8a;
     --background-color: #dddddd83;
+    --viz-background-color: #ffffff6f;
     --text-color: #333333;
     --highlight-color: #d94560;
     --footer-text: #2d2d2d;
