--- a/client/src/app/pages/main-page/main-page.component.html
+++ b/client/src/app/pages/main-page/main-page.component.html
@@ -3,29 +3,29 @@
   <div class="timeline-container">
     <app-viz-section
       sectionId="1."
-      section="Academic Performance vs Career Success"
-      description="Explore the correlation between academic metrics and professional outcomes"
-      [questions]="academicPerformanceQuestions"
-      [answers]="academicPerformanceAnswers">
-      <app-sankey-viz></app-sankey-viz>
+      section="University GPA & Early Career Outcomes"
+      description="This interactive stacked bar chart displays the distribution of university GPAs divided into 10 bins. Each bar represents a GPA range (e.g., '2.5 - 2.8') and shows the average starting salary (scaled) and number of job offers. Observe how academic performance correlates with early career success."
+      [questions]="Questions1"
+      [answers]="Answers1">
+      <app-stacked-bar-viz></app-stacked-bar-viz>
     </app-viz-section>
 
     <app-viz-section
       sectionId="2."
-      section="Experiential Learning Impact"
-      description="Analyze how practical experiences influence career progression"
-      [questions]="experientialLearningQuestions"
-      [answers]="experientialLearningAnswers">
-      <app-scatter-viz></app-scatter-viz>
+      section="blabla"
+      description="blabla"
+      [questions]="Questions2"
+      [answers]="Answers2">
+      <app-sankey-viz></app-sankey-viz>
     </app-viz-section>
 
     <app-viz-section
       sectionId="3."
-      section="Experiential Learning Impact"
-      description="Analyze how practical experiences influence career progression"
-      [questions]="experientialLearningQuestions"
-      [answers]="experientialLearningAnswers">
-      <app-stacked-bar-viz></app-stacked-bar-viz>
+      section="blabla"
+      description="blabla"
+      [questions]="Questions3"
+      [answers]="Answers3">
+      <app-scatter-viz></app-scatter-viz>
     </app-viz-section>
   </div>
   
