feat: about page

--- a/client/src/app/components/header/header.component.html
+++ b/client/src/app/components/header/header.component.html
@@ -1,9 +1,11 @@
 <header class="header">
     <div class="header-content">
-      <a href="/home" class="header-link">
-        <h1 class="title">Beyond<span>GPA</span></h1>
-      </a>
-      <p class="subtitle">Redefining Career Success Metrics</p>
+      <div>
+        <a href="/home" class="header-link">
+          <h1 class="title">Beyond<span>GPA</span></h1>
+        </a>
+        <p class="subtitle">Redefining Career Success Metrics</p>
+      </div>
       <div class="icons">
         <ul class="example-2">
           <li class="icon-content">
