--- a/client/src/app/components/header/header.component.scss
+++ b/client/src/app/components/header/header.component.scss
@@ -8,10 +8,13 @@
   z-index: 1000;
 
   .header-content {
+    display: flex;
+    justify-content: space-between;
     margin: 0 auto;
     padding: 0 2rem;
     position: relative;
   }
+
   .header-link {
     text-decoration: none;
     color: inherit;
@@ -19,12 +22,22 @@
   }
 
   .icons {
-    position: absolute;
-    right: 2rem;
-    top: 50%;
-    transform: translateY(-50%);
     display: flex;
     gap: 1.5rem;
+  }
+}
+
+@media (max-width: 768px) {
+  .header-content {
+    align-items: center;
+    flex-direction: column;
+  }
+
+  .subtitle {
+    display: none;
+  }
+
+  .example-2 {
   }
 }
 
@@ -70,7 +83,6 @@ ul {
   display: flex;
   justify-content: center;
   align-items: center;
-  flex-direction: row;
   padding: 0;
 }
 .example-2 .icon-content {
