--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -21,6 +21,7 @@
     --quaternary-color: #393c7d;
     --background-color: #2c177283;
     --viz-background-color: #0000006f;
+    --viz-section-color: #ffffff0d;
     --text-color: #cbcbcb;
     --highlight-color: #e94560;
     --footer-text: #888;
@@ -32,7 +33,8 @@
     --tertiary-color: #9a9a9a;
     --quaternary-color: #8a8a8a;
     --background-color: #dddddd83;
-    --viz-background-color: #ffffff6f;
+    --viz-background-color: #e4e4e46f;
+    --viz-section-color: #69696914;
     --text-color: #333333;
     --highlight-color: #d94560;
     --footer-text: #2d2d2d;
