--- a/client/src/app/pages/main-page/main-page.component.html
+++ b/client/src/app/pages/main-page/main-page.component.html
@@ -3,29 +3,47 @@
   <div class="timeline-container">
     <app-viz-section
       sectionId="1."
-      section="University GPA & Early Career Outcomes"
-      description="This interactive stacked bar chart displays the distribution of university GPAs divided into 10 bins. Each bar represents a GPA range (e.g., '2.5 - 2.8') and shows the average starting salary (scaled) and number of job offers. Observe how academic performance correlates with early career success."
+      section="Visual 1"
+      description="Description of the first visual."
       [questions]="Questions1"
       [answers]="Answers1">
-      <app-stacked-bar-viz></app-stacked-bar-viz>
+      <app-visual-1></app-visual-1>
     </app-viz-section>
-
+    
     <app-viz-section
       sectionId="2."
-      section="blabla"
-      description="blabla"
+      section="Visual 2"
+      description="Description of the second visual."
       [questions]="Questions2"
       [answers]="Answers2">
-      <app-sankey-viz></app-sankey-viz>
+      <app-visual-2></app-visual-2>
     </app-viz-section>
-
+    
     <app-viz-section
       sectionId="3."
-      section="blabla"
-      description="blabla"
+      section="Visual 3"
+      description="Description of the third visual."
       [questions]="Questions3"
       [answers]="Answers3">
-      <app-scatter-viz></app-scatter-viz>
+      <app-visual-3></app-visual-3>
+    </app-viz-section>
+    
+    <app-viz-section
+      sectionId="4."
+      section="Visual 4"
+      description="Description of the fourth visual."
+      [questions]="Questions4"
+      [answers]="Answers4">
+      <app-visual-4></app-visual-4>
+    </app-viz-section>
+    
+    <app-viz-section
+      sectionId="5."
+      section="Visual 5"
+      description="Description of the fifth visual."
+      [questions]="Questions5"
+      [answers]="Answers5">
+      <app-visual-5></app-visual-5>
     </app-viz-section>
   </div>
   
