--- a/client/src/app/pages/about-page/about-page.component.scss
+++ b/client/src/app/pages/about-page/about-page.component.scss
@@ -1,12 +1,50 @@
 main {
   padding-top: 140px;
+  font-family: 'Roboto', sans-serif;
+  color: var(--text-color);
+  background-color: var(--background-color);
 }
-  
+
 .timeline-container {
   position: relative;
   padding: 0 30px;
-
+  margin: 0 auto;
 }
+
+.section {
+  position: relative;
+  background: var(--viz-section-color);
+  border-radius: 12px;
+  padding: 2rem;
+  margin: 2rem 0;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+
+  &:hover {
+    box-shadow: 0 6px 15px rgba(0, 0, 0, 0.2);
+  }
+
+  p {
+    font-size: 1.1rem;
+    line-height: 1.8;
+    color: var(--text-color-secondary);
+  }
+
+  ul {
+    margin-top: 1rem;
+    padding-left: 1.5rem;
+
+    li {
+      font-size: 1.1rem;
+      line-height: 1.6;
+      color: var(--text-color-secondary);
+    }
+  }
+}
+
 
 footer {
   display: flex;
@@ -29,14 +67,4 @@ footer {
     font-size: 14px;
     text-align: center;
   }
-}
-
-.section {
-  position: relative;
-  background: var(--viz-section-color);
-  border-radius: 12px;
-  padding: 2rem;
-  margin: 2rem 0;
-  box-shadow: 0 4px 10px rgba(0,0,0,0.1);
-  transition: transform 0.3s ease;
 }
