feat: viz-5, UI update

--- a/client/src/app/pages/main-page/main-page.component.html
+++ b/client/src/app/pages/main-page/main-page.component.html
@@ -39,12 +39,13 @@
     
     <app-viz-section
       sectionId="5."
-      section="Visual 5"
-      description="Description of the fifth visual."
+      section="Box Plot: Academic Performance vs. Time to Promotion"
+      description="This visualization uses a box plot to show how university GPA influences the time it takes students to receive their first promotion. It allows us to explore both central trends and variability across GPA brackets."
       [questions]="Questions5"
       [answers]="Answers5">
       <app-visual-5></app-visual-5>
     </app-viz-section>
+
   </div>
   
   <footer>
