fix: viz 2, viz 3

--- a/client/src/app/components/d3/visual-3/visual-3.component.html
+++ b/client/src/app/components/d3/visual-3/visual-3.component.html
@@ -1,18 +1,18 @@
 <div class="container">
-  <select [(ngModel)]="leftSelected" (change)="renderSankey()">
-    <option value="rank">University Rank</option>
-    <option value="sat">SatScore</option>
-    <option value="gpa">GPA</option>
-  </select>
+  <div class="options">
+    <select [(ngModel)]="leftSelected" (change)="renderSankey()">
+      <option value="rank">University Rank</option>
+      <option value="sat">SatScore</option>
+      <option value="gpa">GPA</option>
+    </select>
 
-  <select [(ngModel)]="selectedCategory" (change)="renderSankey()">
-    <option value="promotion">Years to Promotion</option>
-    <option value="jobLevel">Current Job Level</option>
-  </select>
-  
-  <div #chart class="sankey-container"></div>
-  
+    <select [(ngModel)]="selectedCategory" (change)="renderSankey()">
+      <option value="promotion">Years to Promotion</option>
+      <option value="jobLevel">Current Job Level</option>
+    </select>
+  </div>
 
-  <!-- The div where the Sankey diagram will be rendered -->
-  <div #chart class="sankey-container"></div>
+  <div class="chart-container">
+    <div #chart></div>
+  </div>
 </div>
