fix: viz 3-> viz 6

--- a/client/src/app/components/d3/visual-3/visual-3.component.html
+++ b/client/src/app/components/d3/visual-3/visual-3.component.html
@@ -1,5 +1,1 @@
-<div class="charts-grid">
-  <div #salaryChart class="chart"></div>
-  <div #satisfactionChart class="chart"></div>
-  <div #equilibreChart class="chart"></div>
-</div>
+<div #chart></div>
