fix: viz numbers

--- a/client/src/app/pages/main-page/main-page.component.html
+++ b/client/src/app/pages/main-page/main-page.component.html
@@ -19,7 +19,8 @@
       <app-visual-2></app-visual-2>
     </app-viz-section>
     
-    <app-viz-section
+    <!-- becomes visual 3 from report -->
+    <app-viz-section 
       sectionId="3."
       section="Visual 3"
       description="Description of the third visual."
@@ -30,30 +31,21 @@
     
     <app-viz-section
       sectionId="4."
-      section="Visual 4"
-      description="Description of the fourth visual."
+      section="Box Plot: Academic Performance vs. Time to Promotion"
+      description="This visualization uses a box plot to show how university GPA influences the time it takes students to receive their first promotion. It allows us to explore both central trends and variability across GPA brackets."
       [questions]="Questions4"
       [answers]="Answers4">
       <app-visual-4></app-visual-4>
     </app-viz-section>
-    
-    <app-viz-section
-      sectionId="5."
-      section="Box Plot: Academic Performance vs. Time to Promotion"
-      description="This visualization uses a box plot to show how university GPA influences the time it takes students to receive their first promotion. It allows us to explore both central trends and variability across GPA brackets."
-      [questions]="Questions5"
-      [answers]="Answers5">
-      <app-visual-5></app-visual-5>
-    </app-viz-section>
 
     
     <app-viz-section
-      sectionId="6."
-      section="Visual 6"
+      sectionId="5."
+      section="Visual 5"
       description="Description of the third visual."
-      [questions]="Questions6"
-      [answers]="Answers6">
-      <app-visual-6></app-visual-6>
+      [questions]="Questions5"
+      [answers]="Answers5">
+      <app-visual-5></app-visual-5>
     </app-viz-section>
     
   </div>
