--- a/client/src/app/components/d3/visual-5/visual-5.component.html
+++ b/client/src/app/components/d3/visual-5/visual-5.component.html
@@ -1,1 +1,5 @@
-<div #chart></div>
+<div class="charts-grid">
+  <div #salaryChart class="chart"></div>
+  <div #satisfactionChart class="chart"></div>
+  <div #equilibreChart class="chart"></div>
+</div>
