--- a/client/src/app/components/d3/visual-2/visual-2.component.html
+++ b/client/src/app/components/d3/visual-2/visual-2.component.html
@@ -1,12 +1,14 @@
-<div >
-  <!-- <label for="x-axis">Select the variable:</label> -->
+<div>
   <select id="x-axis" [(ngModel)]="selectedX" (change)="updateChart()">
-    <option value="University_GPA">University GPA </option>
+    <option value="University_GPA">University GPA</option>
     <option value="University_Ranking">University ranking</option>
     <option value="SAT_Score">SAT score</option>
   </select>
-
-
 </div>
 
-<div class ="chart-container" #chart></div>
+<div class="chart-container" #chart></div>
+
+<div class="navigation-buttons">
+  <button (click)="previousCharts()">&#8592;</button>
+  <button (click)="nextCharts()">&#8594;</button>
+</div>
