--- a/client/src/app/components/d3/visual-2/visual-2.component.scss
+++ b/client/src/app/components/d3/visual-2/visual-2.component.scss
@@ -28,7 +28,7 @@ div {
 
 .chart-container {
   display: grid;
-  grid-template-columns: repeat(4, 1fr);
+  grid-template-columns: repeat(2, 2fr);
   gap: 20px;
   justify-items: center;
 }
@@ -45,4 +45,25 @@ div {
   text-align: center;
   font-weight: bold;
   color: #333;
+}
+
+.navigation-buttons {
+  display: flex;
+  justify-content: center;
+  gap: 20px;
+  margin-bottom: 10px;
+
+  button {
+    padding: 6px 12px;
+    font-size: 18px;
+    border: none;
+    background-color: var(--secondary-color);
+    color: var(--text-color);
+    border-radius: 4px;
+    cursor: pointer;
+
+    &:hover {
+      background-color: var(--primary-color);
+    }
+  }
 }
