--- a/client/src/app/components/d3/visual-2/visual-2.component.html
+++ b/client/src/app/components/d3/visual-2/visual-2.component.html
@@ -9,7 +9,7 @@
 
   <div class="navigation-buttons">
     <button (click)="previousCharts()" [disabled]="isPreviousDisabled">
-      <span class="button_top"> Previous </span>
+      <span class="button_top"> Prev </span>
     </button>
   
     <button (click)="nextCharts()" [disabled]="isNextDisabled">
