--- a/client/src/app/components/d3/visual-2/visual-2.component.scss
+++ b/client/src/app/components/d3/visual-2/visual-2.component.scss
@@ -41,14 +41,14 @@ select:focus {
 
 .navigation-buttons {
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   gap: 40px;
   margin-top: 20px;
   margin-bottom: 20px;
 }
 
 button {
-  width: 33%;
+  width: 30%;
   --button_radius: 0.75em;
   --button_color: var(--secondary-color);
   --button_outline_color: var(--text-color);
@@ -65,7 +65,7 @@ button {
   box-sizing: border-box;
   border: 2px solid var(--button_outline_color);
   border-radius: var(--button_radius);
-  padding: 0.75em 1.5em;
+  padding: 0.75em;
   background: var(--button_color);
   color: var(--button_outline_color);
   transform: translateY(-0.2em);
