--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -86,18 +86,6 @@ text {
   fill: var(--text-color) !important;
 }
 
-.tooltip-boxplot {
-  position: absolute;
-  z-index: 10;
-  background: rgba(0, 0, 0, 0.75);
-  color: #fff;
-  padding: 6px 10px;
-  border-radius: 4px;
-  font-size: 13px;
-  pointer-events: none;
-  transition: opacity 0.2s ease;
-}
-
 .median-pulse {
   animation: pulseLine 2s infinite ease-in-out;
 }
@@ -116,6 +104,42 @@ line {
 }
 
 app-visual-3{
-    width: 100%;
-    height: 100%;
+  width: 100%;
+  height: 100%;
+}
+
+
+:root,
+[data="dark"] {
+  --landing-background-color: #212121;
+  --landing-gradient-start: #691ba4;
+  --landing-gradient-mid1: #fe53bb;
+  --landing-gradient-mid2: #8f51ea;
+  --landing-gradient-end: #0044ff;
+  --landing-text-color: #cbcbcb;
+  --landing-highlight-color: #e94560;
+  --btn-hover-bg-color: #212121;
+  --btn-active-border-color: #fe53bb;
+  --circle-color-1: rgba(254, 83, 186, 0.636);
+  --circle-color-2: rgba(142, 81, 234, 0.704);
+  --stars-color: #ffffff;
+  --button-hover-bg-color: #ffffff4e;
+  --button-shadow-color: rgba(0, 0, 0, 0.1);
+}
+
+[data="light"] {
+  --landing-background-color: #f5f5f5;
+  --landing-gradient-start: #a78bfa;
+  --landing-gradient-mid1: #f472b6;
+  --landing-gradient-mid2: #c084fc;
+  --landing-gradient-end: #60a5fa;
+  --landing-text-color: #333333;
+  --landing-highlight-color: #d94560;
+  --btn-hover-bg-color: #e0e0e0;
+  --btn-active-border-color: #d94560;
+  --circle-color-1: rgba(244, 114, 182, 0.636);
+  --circle-color-2: rgba(192, 132, 252, 0.704);
+  --stars-color: #cccccc;
+  --button-hover-bg-color: #e0e0e04e;
+  --button-shadow-color: rgba(0, 0, 0, 0.2);
 }
