--- a/client/src/app/components/viz-section/viz-section.component.html
+++ b/client/src/app/components/viz-section/viz-section.component.html
@@ -1,32 +1,41 @@
 <section class="viz-section">
-  <header class="viz-header">
-    <h2 class="viz-title"><span>{{ sectionId }} </span><span>{{ section }}</span></h2>
-  </header>
+  <div class="viz-card">
+    <header class="viz-header">
+      <h2 class="viz-title">
+        <span class="viz-id">{{ sectionId }}</span>
+        <span class="viz-name">{{ section }}</span>
+      </h2>
+    </header>
 
-  <div class="viz-container">
-    <div class="viz-breakdown">
-      <h3>Questions Addressed</h3>
-      <ul class="question-list">
-        <li *ngFor="let question of questions">
-          <strong>{{ question.id }}:</strong> {{ question.text }}
-        </li>
-      </ul>
-    </div>
+    <div class="viz-grid">
+      <div class="viz-details">
+        <div class="viz-block">
+          <h3 class="viz-subtitle">Questions</h3>
+          <ul class="viz-list">
+            <li *ngFor="let question of questions">
+              <span class="label">{{ question.id }}</span> {{ question.text }}
+            </li>
+          </ul>
+        </div>
 
-    <div class="viz-description">
-      <p>{{ description }}</p>
-    </div>
-    <div class="viz-d3-container">
-      <ng-content></ng-content>
-    </div>
+        <div class="viz-block">
+          <h3 class="viz-subtitle">Description</h3>
+          <p class="viz-text">{{ description }}</p>
+        </div>
 
-    <div class="viz-breakdown">
-      <h3>Answers</h3>
-      <ul class="question-list">
-        <li *ngFor="let answer of answers">
-          <strong>{{ answer.id }}:</strong> {{ answer.text }}
-        </li>
-      </ul>
+        <div class="viz-block">
+          <h3 class="viz-subtitle">Answers</h3>
+          <ul class="viz-list">
+            <li *ngFor="let answer of answers">
+              <span class="label">{{ answer.id }}</span> {{ answer.text }}
+            </li>
+          </ul>
+        </div>
+      </div>
+
+      <div class="viz-d3-container">
+        <ng-content></ng-content>
+      </div>
     </div>
   </div>
 </section>
