feat: finish viz 4

--- a/client/src/app/pages/main-page/main-page.component.html
+++ b/client/src/app/pages/main-page/main-page.component.html
@@ -12,9 +12,8 @@
       <app-visual-2></app-visual-2>
     </app-viz-section>
 
-    <!-- becomes visual 3 from report -->
     <app-viz-section sectionId="3." section="Visual 3"
-      description="Each dot represents a student. The plot shows how networking and project completion relate to job offers, with color intensity indicating the number of offers. You can filter by field of study."
+      description="This scatter plot visualizes the relationship between networking score -> X-axis and completed projects  -> Y-axis for students in a selected field of study. Each dot represents one student, and the color intensity indicates the number of job offers received — from lighter (fewer offers) to darker blue (more offers). Use the dropdown menu to filter by field of study"
       [questions]="Questions3" [answers]="Answers3">
       <app-visual-3></app-visual-3>
     </app-viz-section>
