--- a/client/src/app/pages/main-page/main-page.component.html
+++ b/client/src/app/pages/main-page/main-page.component.html
@@ -25,7 +25,7 @@
     </app-viz-section>
 
 
-    <app-viz-section sectionId="5." section="Visual 5" description="Description of the third visual."
+    <app-viz-section sectionId="5." section="Line Plots: Impact of Gender and Age on Career Outcomes" description="This set of line charts explores how demographic factors—namely age and gender—relate to key early career outcomes. The visual compares trends in starting salary, job satisfaction, and work-life balance across age brackets for men and women, helping us identify disparities and potential patterns linked to these variables."
       [questions]="Questions5" [answers]="Answers5">
       <app-visual-5></app-visual-5>
     </app-viz-section>
