Description of vis1

--- a/client/src/app/pages/main-page/main-page.component.html
+++ b/client/src/app/pages/main-page/main-page.component.html
@@ -2,8 +2,8 @@
   <app-header></app-header>
 
   <div class="timeline-container">
-    <app-viz-section sectionId="1." section="Visual 1"
-      description="This visualization uses a "
+    <app-viz-section sectionId="1." section="Box Plot: Impact of GPA on current job title"
+      description="This visualization uses a box-plot to show the relationship between GPA and the current job title of students who graduated at the same time. "
       [questions]="Questions1" [answers]="Answers1">
       <app-visual-1></app-visual-1>
     </app-viz-section>
