--- a/client/src/app/pages/main-page/main-page.component.html
+++ b/client/src/app/pages/main-page/main-page.component.html
@@ -8,8 +8,8 @@
       <app-visual-1></app-visual-1>
     </app-viz-section>
 
-    <app-viz-section sectionId="2." section="Visual 2"
-      description="This visualization uses a "
+    <app-viz-section sectionId="2." section="Bar Chart: Impact of Academic Results on Starting Salary"
+      description="This visualization uses a bar chart to examin the relationship between degree classification and starting salary. By comparing average earnings across different academic result categories, the visual reveals whether stronger academic performance correlates with higher initial pay in early career stages."
       [questions]="Questions2" [answers]="Answers2">
       <app-visual-2></app-visual-2>
     </app-viz-section>
